--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "react-study",
-  "version": "1.0.0",
-  "description": "react.js study from react armory",
-  "main": "app.js",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-scripts": "1.0.11"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zericco/react-study.git"
-  },
-  "keywords": [
-    "react.js"
-  ],
-  "author": "zericco@gmail.com",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zericco/react-study/issues"
-  },
-  "homepage": "https://github.com/zericco/react-study#readme"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
