--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-armory-timer": "^0.1.1"
   }
 }
